@@ -191,6 +191,13 @@ and won't work with versions of jsch earlier than
       <em>since Ant 1.8.3</em></td>
     <td align="center" valign="top">No, defaults to false</td>
   </tr>
+  <tr>
+    <td valign="top">useSystemIn</td>
+    <td valign="top">Whether to pass the current standard input to the
+      remote process.
+      <em>since Ant 1.9.4</em></td>
+    <td align="center" valign="top">No, defaults to false</td>
+  </tr>
 </table>
 
 <h3>Examples</h3>
